# voxshell

./: .gitignore  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile_linux  README.md  aclocal.m4  changelog.txt  configure  configure.ac  configure.in  grammars_linux  grammars_windows.txt  sample.jconf  voxshell.jconf  voxshell_linux.jconf
archive/grammar/: mkdfa.jl~  mkdfa.pl~  weather.sh~
archive/grammar/archive/rhythmbox/: g25754.grammar  g25754.h  g25754.voca  pulseaudiovolume.sh~  rhythmbox.dfa  rhythmbox.dict  rhythmbox.dict_bak  rhythmbox.dict_bak~  rhythmbox.dict~  rhythmbox.grammar  rhythmbox.grammar~  rhythmbox.po.vfvoca  rhythmbox.term  rhythmbox.tmp  rhythmbox.vfdict  rhythmbox.vfvoca  rhythmbox.vfvoca~  rhythmbox.voca  rhythmbox.voca~
docs/: Doxyfile.in  Makefile.am
etc/: 00readme.txt
firefox/en/grammar/: firefox.voca
grammar/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  fr.po_bak
grammar/firefox/: Makefile.am  Makefile.in  firefox.grammar  firefox_voxcreate.c
grammar/firefox/scripts/: page_down.sh  page_up.sh  start.sh
grammar/gedit/: Makefile.am  Makefile.in  gedit.grammar  gedit_voxcreate.c
grammar/gedit/scripts/: close.sh  find.sh  open.sh  pagedown.sh  pageup.sh  quit.sh  redo.sh  replace.sh  save.sh  start.sh  tableft.sh  tabright.sh  undo.sh
grammar/gnome/: Makefile.am  Makefile.in  gnome_voxcreate.c
grammar/gnome/scripts/: open.sh  previous_workspace.sh
grammar/language/: Makefile.am  Makefile.in  en_grammar_list  en_voxshell.jconf
grammar/language/en/: grammar_list  voxshell.jconf
grammar/lib/: Makefile  Makefile.am  Makefile.in  get_parameters.c  libget_parameters.la  libget_parameters_la-get_parameters.lo
grammar/lib/.libs/: libget_parameters.la  libget_parameters.lai  libget_parameters.so.0  libget_parameters.so.0.0.0
grammar/libreoffice/: Makefile.am  Makefile.in  libreoffice_voxcreate.c
grammar/libreoffice/scripts/: open.sh  page_down.sh  start.sh
grammar/po/: Makevars  POTFILES.in  fr (copy).po  fr.po_in  voxshell_apps.pot  voxshell_grammar.pot
grammar/rhythmbox/: Makefile.am  Makefile.in  get_parameters.c  get_parameters.h  rhythmbox.grammar  rhythmbox.vox  rhythmbox.vox.in_old  rhythmbox_voxcreate.c
grammar/rhythmbox/scripts/: dbus_rewind.sh  search.sh  show.sh
grammar/terminal/: Makefile.am  Makefile.in  terminal.grammar  terminal_voxcreate.c
grammar/voxforge/: Makefile.am  Makefile.in  voxforge_voxcreate.c
include/julius/: config.h
include/sent/: config.h
language/: Makefile.am  Makefile.in
language/apps/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
language/apps/po/: POTFILES.in
language/apps/rhythmbox/: Makefile.am  Makefile.in  rhythmbox_voxcreate.c  temp
language/apps/rhythmbox/scripts/: dbus_fastforward.sh
language/apps/test/share/locale/fr/LC_MESSAGES/: voxshell_apps.mo
language/data/: en_tiedlist
language/en/: Makefile.am  Makefile.in  configure  configure.ac  grammars_linux  grammars_windows.txt  voxshell.jconf
language/en/grammars/: Makefile.am  Makefile.in
language/en/grammars/firefox/: Makefile.am  Makefile.in  firefox.vox.in
language/en/grammars/gnome/: Makefile.am  Makefile.in  gnome.vox.in
language/en/grammars/libreoffice/: Makefile.am  Makefile.in  libreoffice.vox.in
language/en/grammars/libreoffice/scripts/: open.sh  page_up.sh
language/en/grammars/rhythmbox/: Makefile.am  Makefile.in  rhythmbox.vox.in
language/en/grammars/rhythmbox/scripts/: search.sh
language/en/grammars/shell/: Makefile.am  Makefile.in  shell.vox.in
language/en/grammars/shell/scripts/: ruby_weather.rb  weather.sh
language/en/linux/: Makefile  Makefile.in
language/en/linux/firefox/: firefox.vox
language/en/linux/firefox/grammar/: Makefile  firefox.dict  firefox.grammar  firefox.term  firefox.voca  firefox.vox
language/en/linux/firefox/scripts/: search.sh
language/en/linux/gnome/: Makefile
language/en/linux/gnome/grammar/: gnome.grammar  gnome.vox
language/en/linux/gnome/scripts/: next_workspace.sh
language/en/linux/libreoffice/: libreoffice.vox
language/en/linux/libreoffice/grammar/: Makefile  libreoffice.grammar
language/en/linux/libreoffice/scripts/: page_down.sh
language/en/linux/rhythmbox/: Makefile  rhythmbox.vox
language/en/linux/rhythmbox/grammar/: Makefile  rhythmbox.dfa  rhythmbox.dict  rhythmbox.grammar  rhythmbox.term  rhythmbox.voca  rhythmbox.vox
language/en/linux/rhythmbox/scripts/: dbus_seek.sh  search.sh
language/en/linux/shell/grammar/: Makefile  shell.dict  shell.voca  shell.vox
language/en/linux/shell/scripts/: listdirs.sh
language/en/windows/: Makefile.am  Makefile.in  grammar_list
language/en/windows/firefox/: Makefile.am  Makefile.in  firefox.vox
language/en/windows/firefox/grammar/: firefox.vox
lib/gramtools/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.in
lib/gramtools/dfa_minimize/: Makefile  Makefile.am  Makefile.in
lib/gramtools/mkfa/: Makefile  Makefile.am  Makefile.in  dfa.c  gram.c  gram.y  gramtab.c  main.c  mkfa.h  nfa.c  triplet.c
lib/gramtools/mkfa/doc/: mkfa.doc
lib/libjulius/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.in  libjulius-config  libjulius-config-dist  libjulius-config.in
lib/libjulius/include/julius/: config.h  config.h.in
lib/libjulius/m4/: README
lib/libjulius/src/: version.c
lib/libsent/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libsent-config  libsent-config-dist  libsent-config.in
lib/libsent/include/sent/: config.h  config.h.in
lib/libsent/src/net/: server-client.c
lib/libsent/src/util/: qsort.c
plugin/windows/: result.c
po/: POTFILES.in  fr.po  voxshell.pot
rhythmbox/en/grammar/: rhythmbox.dict  rhythmbox.voca
sample/: sample.dict
sample/en/sample/: sample.dict
scripts/: compile_grammar.jl
shell/en/grammar/: shell.dict  shell.voca
src/: Makefile  Makefile.am  Makefile.in  compile_grammar.jl  config.h.in  julius-simple.c  libjulius-config  voxshell.c  voxshell.h
(+4 files in other folders)
