AC_INIT([voxshell], [0.3.1], [contact@voxforge.org]) 
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror]) 
AM_PROG_AR
LT_INIT
AC_PROG_CC
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile language/Makefile])
AC_CONFIG_SUBDIRS([lib/libjulius lib/gramtools language/en])
AC_OUTPUT
