datafilesdir=$(datadir)/@SHARE_FOLDER@/language/@VF_LANGUAGE@
dist_datafiles_DATA = \
@VF_LANGUAGE@/tiedlist \
@VF_LANGUAGE@/hmmdefs \
@VF_LANGUAGE@/voxforgedict.txt \
@VF_LANGUAGE@/voxshell.jconf \
@VF_LANGUAGE@/grammar_list

##### files to be included in 'make dist'
EXTRA_DIST = \
$(dist_datafiles_DATA)

