#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gramtools], [1.0], [kmaclean@voxforge.org])
AM_INIT_AUTOMAKE([foreign -Wall -Werror]) 
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
LT_INIT
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile mkfa/Makefile dfa_minimize/Makefile])
#AC_CONFIG_SUBDIRS([dfa_minimize])
AC_OUTPUT
