dnl Copyright (c) 1991-2013 Kawahara Lab., Kyoto University
dnl Copyright (c) 2000-2005 Shikano Lab., Nara Institute of Science and Technology
dnl Copyright (c) 2005-2013 Julius project team, Nagoya Institute of Technology
dnl All rights reserved

AC_INIT(00readme.txt)
AC_CONFIG_AUX_DIR(../support)
dnl Checks for optimization flag
AC_CANONICAL_HOST
AC_MSG_CHECKING([host-specific optimization flag])
if test -z "$CFLAGS" ; then
    OPTFLAG=../support/cflags.${host_cpu}-${host_vendor}-${host_os}
    if test -f "$OPTFLAG" ; then
	. $OPTFLAG
	AC_MSG_RESULT([$OPTFLAG])
    else
	AC_MSG_RESULT([no])
    fi
else
    AC_MSG_RESULT([skipped])
fi
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_EXEEXT

dnl Checks for optimization flag
AC_MSG_CHECKING([host specific optimization flag])
if test -z "$CFLAGS" ; then
    OPTFLAG=../support/cflags.${host_cpu}-${host_vendor}-${host_os}
    if test -f "$OPTFLAG" ; then
	. $OPTFLAG
	AC_MSG_RESULT([$OPTFLAG])
    else
	AC_MSG_RESULT([no])
    fi
else
    AC_MSG_RESULT([skipped])
fi

AC_PATH_PROG(RM,rm)
AC_PATH_PROG(PERL,perl)
if test -z "$PERL"; then
	AC_MSG_ERROR([perl not found! installation terminated])
fi

AC_PATH_PROG(ICONV,iconv)
if test -z "$ICONV"; then
	AC_MSG_WARN([no iconv, gram2sapixml.pl may not work])
else
    AC_MSG_CHECKING([for Jcode module in perl])
    if $PERL -mJcode -e "print;"; then
        AC_MSG_RESULT([yes])
    else
	AC_MSG_WARN([no Jcode module in perl, gram2sapixml.pl may not work])
    fi
fi


dnl check for malloc.h
AC_CHECK_HEADERS(malloc.h)

AC_OUTPUT(Makefile mkfa/Makefile dfa_minimize/Makefile )

